optional papers for the first bug class

--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -132,13 +132,6 @@
                             <li>
                                 <a class="paperlink" href="slides/cs598_intro.pdf" target="_blank">Course Overview</a>
                             </li>
-                            <!--
-                            <li>
-                                W. G. Griswold,
-                                <a class="paperlink" href="https://cseweb.ucsd.edu/~wgg/CSE210/howtoread.html" target="_blank">How
-                                to Read an Engineering Research Paper</a>.
-                            </li>
-                          -->
                         </ul>
 
                     </td>
@@ -223,7 +216,7 @@
                             <li> (Optional) related papers mentioned in Dean's talk:
                                  <p></p>
                               <ul>
-                                <li>S. Ghemawat, H. Gobioff, and 	S-T. Leung,
+                                <li>S. Ghemawat, H. Gobioff, and 	S-. T. Leung,
                                 <a class="paperlink" href="https://static.googleusercontent.com/media/research.google.com/en//archive/gfs-sosp2003.pdf" target="_blank">The Google file system</a>,
                                 In Proceedings of the 19th ACM Symposium on Operating Systems Principles (SOSP), October 2013.
                                   <p></p>
@@ -326,8 +319,45 @@
                                   A Study of 3000+ Issues in Cloud Systems</a>,
                                   In Proceedings of the 5th ACM Symposium on
                                   Cloud Computing (SOCC), November 2014.
+                                  <p></p>
                             </li>
-                        </ul>
+                            <li> (Optional) related paper on error handling code:
+                                 <p></p>
+                              <ul>
+                                <li>H. S. Gunawi, C. R-. González, A. C. Arpaci-Dusseau,
+                                  R. H. Arpaci-Dusseau, and B. Liblit,
+                                <a class="paperlink" href="https://www.usenix.org/legacy/event/fast08/tech/full_papers/gunawi/gunawi.pdf" target="_blank">EIO: Error Handling is Occasionally Correct</a>,
+                                In Proceedings of the 6th USENIX Conference on File and Storage Technologies (FAST), February 2008.
+                                  <p></p>
+                                </li>
+                              </ul>
+                            </li>
+                            <li> (Optional) related bug studies:
+                                 <p></p>
+                              <ul>
+                                <li>L. Lu, A. C. Arpaci-Dusseau, R. H. Arpaci-Dusseau, and S. Lu,
+                                <a class="paperlink" href="http://research.cs.wisc.edu/adsl/Publications/fsstudy-fast13.pdf" target="_blank">A Study of Linux File System Evolution</a>,
+                                In Proceedings of the 11th USENIX Conference on File and Storage Technologies (FAST), February 2013. <b>(bugs in file systems)</b>
+                                  <p></p>
+                                </li>
+                                <li>G. Jin, L. Song, X. Shi, J. Scherpelz, and Shan Lu,
+                                <a class="paperlink" href="http://pages.cs.wisc.edu/~shanlu/paper/pldi118-jin.pdf" target="_blank">Understanding and Detecting Real-World Performance Bugs</a>,
+                                In Proceedings of the 33rd ACM SIGPLAN Conference on Programming Language Design and Implementation (PLDI), June 2012. <b>(performance bugs)</b>
+                                  <p></p>
+                                </li>
+                                <li> S. Lu, S. Park, E. Seo, and Y. Zhou,
+                                <a class="paperlink" href="https://people.cs.uchicago.edu/~shanlu/preprint/asplos122-lu.pdf" target="_blank">Learning
+                                  from Mistakes — A Comprehensive Study on Real World Concurrency Bug Characteristics</a>,
+                                  In Proceedings of the 13th International Conference on Architectural Support for Programming Languages and Operating Systems (ASPLOS), March 2008. <b>(concurrency bugs)</b>
+                                  <p></p>
+                                </li>
+                                <li> A. Chou, J. Yang, B. Chelf, S. Hallem, and D. Engler,
+                                  <a class="paperlink" href="https://dl.acm.org/citation.cfm?id=502042" target="_blank">An Empirical Study of Operating Systems Errors</a>,
+                                  In Proceedings of the 18th ACM Symposium on Operating Systems Principles (SOSP), October 2001. <b>(bugs in OS kernels)</b>
+                                </li>
+                              </ul>
+                            </li>
+                          </ul>
                     </td>
                 </tr>
 
@@ -335,7 +365,6 @@
                     <td class="date"><a name="3th">Thu<br>9/13</a></td>
                     <td class="papers">
                         <ul>
-
                             <li> A. Ganesan, R. Alagappan, A. C. Arpaci-Dusseau,
                               and R. H. Arpaci-Dusseau,
                                 <a class="paperlink" href="https://www.usenix.org/system/files/conference/fast17/fast17-ganesan.pdf" target="_blank">Redundancy
