--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -340,7 +340,7 @@
                                 In Proceedings of the 11th USENIX Conference on File and Storage Technologies (FAST), February 2013. <b>(bugs in file systems)</b>
                                   <p></p>
                                 </li>
-                                <li>G. Jin, L. Song, X. Shi, J. Scherpelz, and Shan Lu,
+                                <li>G. Jin, L. Song, X. Shi, J. Scherpelz, and S. Lu,
                                 <a class="paperlink" href="http://pages.cs.wisc.edu/~shanlu/paper/pldi118-jin.pdf" target="_blank">Understanding and Detecting Real-World Performance Bugs</a>,
                                 In Proceedings of the 33rd ACM SIGPLAN Conference on Programming Language Design and Implementation (PLDI), June 2012. <b>(performance bugs)</b>
                                   <p></p>
