--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -856,6 +856,17 @@
                                 In Proceedings of the 25th ACM Symposium on Operating Systems Principles (SOSP), October 2015.
                                 <p></p>
                             </li>
+                            <li> (Optional) related paper on error handling code:
+                                 <p></p>
+                              <ul>
+                                <li>P. Fonseca, K. Zhang, X. Wang, and A. Krishnamurthy,
+                                <a class="paperlink" href="https://dl.acm.org/citation.cfm?doid=3064176.3064183" target="_blank">An Empirical Study on the Correctness of
+                                    Formally Verified Distributed Systems</a>,
+                                In Proceedings of the 2017 European Conference on Computer Systems (EuroSys), April 2017.
+                                  <p></p>
+                                </li>
+                              </ul>
+                            </li>
                         </ul>
                     </td>
                 </tr>
