--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -856,7 +856,7 @@
                                 In Proceedings of the 25th ACM Symposium on Operating Systems Principles (SOSP), October 2015.
                                 <p></p>
                             </li>
-                            <li> (Optional) related paper on error handling code:
+                            <li> (Optional) related papers on verified systems:
                                  <p></p>
                               <ul>
                                 <li>P. Fonseca, K. Zhang, X. Wang, and A. Krishnamurthy,
