--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -382,6 +382,19 @@
                                 Bugs: When 100-Node Testing is Not Enough</a>,
                                 In Proceedings of the 16th Workshop on Hot Topics
                                 in Operating Systems (HotOS), May 2017.
+                                <p></p>
+                            </li>
+                            <li> (Optional) related paper on bugs in distributed systems:
+                                 <p></p>
+                              <ul>
+                                <li>T. Leesatapornwongsa, J. F. Lukman, S. Lu, and H. S. Gunawi,
+                                <a class="paperlink" href="http://people.cs.uchicago.edu/~shanlu/preprint/asplos16-TaxDC.pdf" target="_blank">TaxDC: A Taxonomy of Non-Deterministic Concurrency Bugs
+                                  in Datacenter Distributed Systems</a>,
+                                In Proceedings of the 21th ACM International Conference on Architectural Support for Programming Languages
+                                and Operating Systems (ASPLOS'16), April 2016.
+                                  <p></p>
+                                </li>
+                              </ul>
                             </li>
                         </ul>
                     </td>
