optional readings for configs

--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -429,6 +429,31 @@
                                   In Proceedings of the 25th Symposium on
                                   Operating Systems Principles (SOSP),
                                   October 2015.
+                                  <p></p>
+                            </li>
+                            <li> (Optional) related papers:
+                                 <p></p>
+                              <ul>
+                                <li>T. Xu, J. Zhang, P. Huang, J. Zheng, T. Sheng, D. Yuan, Y. Zhou, and S. Pasupathy,
+                                <a class="paperlink" href="https://tianyin.github.io/papers/sosp13.pdf" target="_blank">Do Not Blame Users for Misconfigurations</a>,
+                                In Proceedings of the 24th ACM Symposium on Operating Systems Principles (SOSP), November, 2013.
+                                  <p></p>
+                                </li>
+                                <li>M. Attariyan and J. Flinn,
+                                <a class="paperlink" href="http://lethe.eecs.umich.edu/papers/confaid.pdf" target="_blank">Automating configuration troubleshooting with dynamic information flow analysis</a>,
+                                In Proceedings of the 9th USENIX Conference on Operating Systems Design and Implementation (OSDI), October 2010.
+                                  <p></p>
+                                </li>
+                                <li> H. J. Wang, J. C. Platt, Y. Chen, R. Zhang, and Y-. M. Wang,
+                                <a class="paperlink" href="http://www.cs.cmu.edu/~15849g/readings/wang04.pdf" target="_blank">Automatic Misconfiguration Troubleshooting with PeerPressure</a>,
+                                  In Proceedings of the 6th USENIX Conference on Operating Systems Design and Implementation (OSDI), December 2004.
+                                  <p></p>
+                                </li>
+                                <li> O. Alipourfard, J. Chen, H. Liu, S. Venkataraman, M. Yu, and M. Zhang,
+                                <a class="paperlink" href="http://minlanyu.seas.harvard.edu/writeup/nsdi17-cherrypick.pdf" target="_blank">CherryPick: Adaptively Unearthing the Best Cloud Configurations</a>,
+                                  In Proceedings of the 14th USENIX Symposium on Networked Systems Design and Implementation (NSDI), March 2017.
+                                </li>
+                              </ul>
                             </li>
                         </ul>
                     </td>
