optional for hw

--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -268,6 +268,12 @@
                       <li> (Optional) related papers on the characteristics of the faults discussed in class:
                            <p></p>
                         <ul>
+                            <li> T. Do and H. S. Gunawi,
+                              <a class="paperlink" href="https://newtraell.cs.uchicago.edu/files/tr_authentic/TR-2013-08.pdf" target="_blank">
+                                Impact of Limpware on HDFS: A Probabilistic Estimation</a>,
+                                Tech report TR-2013-08, Department of Computer Science, University of Chicago, 2013.
+                              <p></p>
+                            </li>
                             <li> H. S. Gunawi, et al.,
                                 <a class="paperlink" href="https://www.usenix.org/node/210509" target="_blank">
                                   Fail-Slow at Scale: Evidence of Hardware
