optional papers for network failures

--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -515,6 +515,24 @@
                             <li> J. Meza, T. Xu, K. Veeraraghavan, and Y. J. Song,
                                 <a class="paperlink" href="" target="_blank">A Large-Scale Study of Data Center Network Reliability</a>,
                                   In Proceedings of the 2018 Internet Measurement Conference (IMC'18), Oct. 31 - Nov. 2, 2017.
+                                  <p></p>
+                            </li>
+                            <li> (Optional) related papers on the characteristics of the faults discussed in class:
+                                 <p></p>
+                              <ul>
+                                  <li> R. Govindan, I. Minei, M. Kallahalla, B. Koley, and A. Vahdat,
+                                    <a class="paperlink" href="https://dl.acm.org/citation.cfm?id=2934891" target="_blank">
+                                      Evolve or Die: High-Availability Design Principles Drawn from Googles Network Infrastructure</a>,
+                                      In Proceedings of the 2016 ACM SIGCOMM Conference (SIGCOMM'16), August, 2016.
+                                    <p></p>
+                                  </li>
+                                  <li> P. Gill, N. Jain, and N. Nagappan,
+                                      <a class="paperlink" href="https://conferences.sigcomm.org/sigcomm/2011/papers/sigcomm/p350.pdf" target="_blank">
+                                        Understanding Network Failures in Data Centers: Measurement, Analysis, and Implications</a>,
+                                        In Proceedings of the 2011 ACM SIGCOMM Conference (SIGCOMM'11), August, 2011.
+                                      <p></p>
+                                  </li>
+                              </ul>
                             </li>
                         </ul>
                     </td>
