optional reading for hw failure

--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -289,6 +289,19 @@
                                   Support for Programming Languages and Operating Systems (ASPLOS), March, 2012.
                                 <p></p>
                             </li>
+                            <li> M. J. Renzelmann, A. Kadav, and M. M. Swift,
+                              <a class="paperlink" href="https://www.usenix.org/node/170858" target="_blank">
+                                  SymDrive: Testing Drivers without Devices</a>,
+                                  In Proceedings of the 12th Symposium on Operating System Design
+                                  and Implementation (OSDI'12), October 2012.
+                                <p></p>
+                            </li>
+                            <li> M. Swift, M. Annamalai, B. N. Bershad, and H. M. Levy,
+                              <a class="paperlink" href="https://www.usenix.org/legacy/event/osdi04/tech/swift/swift.pdf" target="_blank">
+                                  Recovering Device Drivers</a>,
+                                  In Proceedings of the 6th ACM/USENIX Symposium on Operating Systems Design and Implementation
+                                  (OSDI'04), December 2012.
+                            </li>
                         </ul>
                       </li>
                     </ul>
