--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -250,6 +250,14 @@
                     <td class="date"><a name="2th">Thu<br>9/6</a></td>
                     <td class="papers">
                       <ul>
+                        <li>
+                            <b>
+                              Yifan will present the device driver paper and
+                              share his work at NVIDIA on building reliable
+                              GPU drivers.
+                            </b>
+                            <p></p>
+                        </li>
                         <li> T. Do, M. Hao, T. Leesatapornwongsa, T. Patana-anake, and H. S. Gunawi,
                             <a class="paperlink" href="http://ucare.cs.uchicago.edu/pdf/socc13-limplock.pdf" target="_blank">Limplock: Understanding
                             the Impact of Limpware on Scale-Out Cloud Systems</a>,
@@ -265,7 +273,7 @@
                             October 2009.
                             <p></p>
                         </li>
-                      <li> (Optional) related papers on the characteristics of the faults discussed in class:
+                      <li> (Optional) related papers on limpware and device drivers:
                            <p></p>
                         <ul>
                             <li> T. Do and H. S. Gunawi,
