--- a/cs598-fa18/index.html
+++ b/cs598-fa18/index.html
@@ -121,7 +121,7 @@
     </p>
 
     <p>
-      You are required to write reviews for the designated papers.
+      You are required to write reviews for the assigned papers.
       The review form (which consists of a number of questions) will be posted at
       <a href="https://piazza.com/class/jl77pjhw26f3q3" target="_blank">Piazza</a>.
       The review is due <b>11:59pm Mon/Wed</b> (the day before the class day).
