--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -252,8 +252,7 @@
                       <ul>
                         <li>
                             <b>
-                              Yifan will present the device driver paper and
-                              share his work at NVIDIA on building reliable
+                              Yifan will share his work at NVIDIA on building reliable
                               GPU drivers.
                             </b>
                             <p></p>
@@ -455,6 +454,9 @@
                     <td class="date"><a name="4tu">Tue<br>9/18</a></td>
                     <td class="papers">
                         <ul>
+                          <b>A workshop on the course projects.</b>
+                              <p></p>
+
                             <li> T. Xu, X. Jin, P. Huang, Y. Zhou, S. Lu, L. Jin,
                               and S. Pasupathy,
                                 <a class="paperlink" href="https://www.usenix.org/system/files/conference/osdi16/osdi16-xu.pdf" target="_blank">Early
@@ -540,7 +542,7 @@
                     <td class="papers">
                         <ul>
 
-                            <b>Guest lecture:</b> Network Storms at Facebook
+                            <b>Justin Meza from Facebook will give a guest lecture on Network Storms at Facebook.</b>
 
                                 <p></p>
 
