saurabh agrees to present

--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -408,6 +408,10 @@
                     <td class="date"><a name="3th">Thu<br>9/13</a></td>
                     <td class="papers">
                         <ul>
+                            <li>
+                              <b>Saurabh will co-present the distributed storage systems paper and share his experiences on reliability of distributed file and storage systems.</b>
+                              <p></p>
+                            </li>
                             <li> A. Ganesan, R. Alagappan, A. C. Arpaci-Dusseau,
                               and R. H. Arpaci-Dusseau,
                                 <a class="paperlink" href="https://www.usenix.org/system/files/conference/fast17/fast17-ganesan.pdf" target="_blank">Redundancy
@@ -454,9 +458,10 @@
                     <td class="date"><a name="4tu">Tue<br>9/18</a></td>
                     <td class="papers">
                         <ul>
-                          <b>A workshop on the course projects.</b>
+                            <li>
+                              <b>A workshop on the course projects.</b>
                               <p></p>
-
+                            </li>
                             <li> T. Xu, X. Jin, P. Huang, Y. Zhou, S. Lu, L. Jin,
                               and S. Pasupathy,
                                 <a class="paperlink" href="https://www.usenix.org/system/files/conference/osdi16/osdi16-xu.pdf" target="_blank">Early
@@ -541,11 +546,10 @@
                     <td class="date"><a name="5tu">Tue<br>9/25</a></td>
                     <td class="papers">
                         <ul>
-
-                            <b>Justin Meza from Facebook will give a guest lecture on Network Storms at Facebook.</b>
-
+                            <li>
+                                <b>Justin Meza from Facebook will give a guest lecture on Network Storms at Facebook.</b>
                                 <p></p>
-
+                            </li>
                             <li> P. Bailis and K. Kingsbury,
                                 <a class="paperlink" href="https://cacm.acm.org/magazines/2014/9/177925-the-network-is-reliable/abstract" target="_blank">The
                                   Network Is Reliable</a>,
