--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -663,7 +663,7 @@
                                 In Proceedings of the 2010 USENIX Annual Technical Conference (USENIX ATC '10), June 2010.
                                 <p></p>
                             </li>
-                            <li> <b>Watch the video: </b> C. McCaffrey, <a class="paperlink" href="https://www.youtube.com/watch?v=kDh5BrqiGhI" target="_blank">The
+                            <li> <b>To grab an overview of industry practices of testing distributed systems, watch the video: </b> C. McCaffrey, <a class="paperlink" href="https://www.youtube.com/watch?v=kDh5BrqiGhI" target="_blank">The
                               Verification of a Distributed System</a>,
                               goto; conference, May 2016,
                               <br>
