--- a/publication.html
+++ b/publication.html
@@ -56,6 +56,7 @@ td.papers {
 <table width="90%" align="center" border="0" height="1">
   <!--DWLayoutTable-->
   <tbody>
+
 		<tr>
     	<td class="date"><font color="#083b89">IMC'18</font></td>
   		<td class="papers">
@@ -299,6 +300,10 @@ td.papers {
 		</tr>
 
  		<tr>
+			<td class="date">&nbsp;</td>
+			<td class="papers">&nbsp;</td>
+		</tr>
+		<tr>
 			<td class="date">&nbsp;</td>
 			<td class="papers">&nbsp;</td>
 		</tr>
