--- a/publication.html
+++ b/publication.html
@@ -95,7 +95,7 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
 		      <span style="font-size: 12pt; font-family: Times New Roman;">
-						<strong>Mining Container Image Repositories for Software Configurations and Beyond</strong> [<a href="papers/icse-nier18.pdf">pdf</a> | <a href="papers/icse-nier18.ps">ps</a> | <a href="papers/icse-nier18.bib">bib</a>]
+						<strong>Mining Container Image Repositories for Software Configurations and Beyond</strong> [<a href="papers/icse-nier18.pdf" target="_blank">pdf</a> | <a href="papers/icse-nier18.ps" target="_blank">ps</a> | <a href="papers/icse-nier18.bib" target="_blank">bib</a>]
 						<br>
 						Tianyin Xu and Darko Marinov
 						<br>
@@ -111,7 +111,7 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
 		      <span style="font-size: 12pt; font-family: Times New Roman;">
-						<strong>Towards Web-based Delta Synchronization for Cloud Storage Services</strong> [<a href="papers/fast18.pdf">pdf</a> | <a href="papers/fast18.ps">ps</a> | <a href="papers/fast18.bib">bib</a>]
+						<strong>Towards Web-based Delta Synchronization for Cloud Storage Services</strong> [<a href="papers/fast18.pdf" target="_blank">pdf</a> | <a href="papers/fast18.ps" target="_blank">ps</a> | <a href="papers/fast18.bib" target="_blank">bib</a>]
 						<br>
 						He Xiao, Zhenhua Li, Ennan Zhai, Tianyin Xu, Yang Li, Yonghe Wang, Quanlu Zhang, and Yao Liu
 						<br>
@@ -127,7 +127,7 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
 		      <span style="font-size: 12pt; font-family: Times New Roman;">
-						<strong>How Do System Administrators Resolve Access-Denied Issues in the Real World? </strong> [<a href="papers/chi17.pdf">pdf</a> | <a href="papers/chi17.ps">ps</a> | <a href="papers/chi17.bib">bib</a>]
+						<strong>How Do System Administrators Resolve Access-Denied Issues in the Real World? </strong> [<a href="papers/chi17.pdf" target="_blank">pdf</a> | <a href="papers/chi17.ps" target="_blank">ps</a> | <a href="papers/chi17.bib" target="_blank">bib</a>]
 						<br>
 						Tianyin Xu, Han Min Naing, Le Lu, and Yuanyuan Zhou
 						<br>
@@ -143,7 +143,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt; font-family: Times New Roman;">
-						<strong>Early Detection of Configuration Errors to Reduce Failure Damage</strong> [<a href="papers/osdi16.pdf">pdf</a> | <a href="papers/osdi16.ps">ps</a> | <a href="papers/osdi16.bib">bib</a>]
+						<strong>Early Detection of Configuration Errors to Reduce Failure Damage</strong> [<a href="papers/osdi16.pdf" target="_blank">pdf</a> | <a href="papers/osdi16.ps" target="_blank">ps</a> | <a href="papers/osdi16.bib" target="_blank">bib</a>]
 						<br>
 						Tianyin Xu, Xinxin Jin, Peng Huang, Yuanyuan Zhou, Shan Lu, Long Jin, and Shankar Pasupathy
 						<br>
@@ -161,7 +161,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt; font-family: Times New Roman;">
-						<strong>DefDroid: Towards a More Defensive Mobile OS Against Disruptive App Behavior</strong> [<a href="papers/mobisys16.pdf">pdf</a> | <a href="papers/mobisys16.ps">ps</a> | <a href="papers/mobisys16.bib">bib</a>]
+						<strong>DefDroid: Towards a More Defensive Mobile OS Against Disruptive App Behavior</strong> [<a href="papers/mobisys16.pdf" target="_blank">pdf</a> | <a href="papers/mobisys16.ps" target="_blank">ps</a> | <a href="papers/mobisys16.bib" target="_blank">bib</a>]
 						<br>
 						Peng Huang, Tianyin Xu, Xinxin Jin, and Yuanyuan Zhou
 						<br>
@@ -177,7 +177,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt; font-family: Times New Roman;">
-						<strong>NChecker: Saving Mobile App Developers from Network Disruptions</strong> [<a href="papers/eurosys16.pdf">pdf</a> | <a href="papers/eurosys16.ps">ps</a> | <a href="papers/eurosys16.bib">bib</a>]
+						<strong>NChecker: Saving Mobile App Developers from Network Disruptions</strong> [<a href="papers/eurosys16.pdf" target="_blank">pdf</a> | <a href="papers/eurosys16.ps" target="_blank">ps</a> | <a href="papers/eurosys16.bib" target="_blank">bib</a>]
 						<br>
 						Xinxin Jin, Peng Huang, Tianyin Xu, and Yuanyuan Zhou
 						<br>
@@ -193,7 +193,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt; font-family: Times New Roman;">
-						<strong>Exploring Cross-Application Cellular Traffic Optimization with Baidu TrafficGuard</strong> [<a href="papers/nsdi16.pdf">pdf</a> | <a href="papers/nsdi16.ps">ps</a> | <a href="papers/nsdi16.bib">bib</a>]
+						<strong>Exploring Cross-Application Cellular Traffic Optimization with Baidu TrafficGuard</strong> [<a href="papers/nsdi16.pdf" target="_blank">pdf</a> | <a href="papers/nsdi16.ps" target="_blank">ps</a> | <a href="papers/nsdi16.bib" target="_blank">bib</a>]
 						<br>
 						Zhenhua Li, Weiwei Wang, Tianyin Xu, Xin Zhong, Xiang-Yang Li, Yunhao Liu, Christo Wilson, and Ben Y. Zhao
 						<br>
@@ -209,7 +209,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt; font-family: Times New Roman;">
-						<strong>Offline Downloading in China: A Comparative Study</strong> [<a href="papers/imc15.pdf">pdf</a> | <a href="papers/imc15.ps">ps</a> | <a href="papers/imc15.bib">bib</a>]
+						<strong>Offline Downloading in China: A Comparative Study</strong> [<a href="papers/imc15.pdf" target="_blank">pdf</a> | <a href="papers/imc15.ps" target="_blank">ps</a> | <a href="papers/imc15.bib" target="_blank">bib</a>]
 						<br>
 						Zhenhua Li, Christo Wilson, Tianyin Xu, Yao Liu, Zhen Lu, and Yinlong Wang
 						<br>
@@ -225,7 +225,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt; font-family: Times New Roman;">
-						<strong>Hey, You Have Given Me Too Many Knobs! Understanding and Dealing with Over-Designed Configuration in System Software</strong> [<a href="papers/fse15.pdf">pdf</a> | <a href="papers/fse15.ps">ps</a> | <a href="papers/fse15.bib">bib</a>]
+						<strong>Hey, You Have Given Me Too Many Knobs! Understanding and Dealing with Over-Designed Configuration in System Software</strong> [<a href="papers/fse15.pdf" target="_blank">pdf</a> | <a href="papers/fse15.ps" target="_blank">ps</a> | <a href="papers/fse15.bib" target="_blank">bib</a>]
 						<br>
 						Tianyin Xu, Long Jin, Xuepeng Fan, Yuanyuan Zhou, Shankar Pasupathy, and Rukma Talwadker
 						<br>
@@ -241,7 +241,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt; font-family: Times New Roman;">
-						<strong>Systems Approaches to Tackling Configuration Errors: A Survey</strong></span> [<a href="papers/csur.pdf">pdf</a> | <a href="papers/csur.ps">ps</a> | <a href="papers/csur.bib">bib</a>]
+						<strong>Systems Approaches to Tackling Configuration Errors: A Survey</strong></span> [<a href="papers/csur.pdf" target="_blank">pdf</a> | <a href="papers/csur.ps" target="_blank">ps</a> | <a href="papers/csur.bib" target="_blank">bib</a>]
 						<br>
 						Tianyin Xu and Yuanyuan Zhou
 						<br>
@@ -257,7 +257,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt; font-family: Times New Roman;">
-						<strong>Towards Network-level Efficiency for Cloud Storage Services</strong> [<a href="papers/imc14.pdf">pdf</a> | <a href="papers/imc14.ps">ps</a> | <a href="papers/imc14.bib">bib</a>]
+						<strong>Towards Network-level Efficiency for Cloud Storage Services</strong> [<a href="papers/imc14.pdf" target="_blank">pdf</a> | <a href="papers/imc14.ps" target="_blank">ps</a> | <a href="papers/imc14.bib" target="_blank">bib</a>]
 						<br>
 						Zhenhua Li, Cheng Jin, Tianyin Xu, Christo Wilson, Yao Liu, Linsong Cheng, Yunhao Liu, Yafei Dai, and Zhi-Li Zhang
 						<br>
@@ -273,7 +273,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt; font-family: Times New Roman;">
-						<strong> EnCore: Exploiting System Environment and Correlation Information for Misconfiguration Detection </strong> [<a href="papers/asplos14.pdf">pdf</a> | <a href="papers/asplos14.ps">ps</a> | <a href="papers/asplos14.bib">bib</a>]
+						<strong> EnCore: Exploiting System Environment and Correlation Information for Misconfiguration Detection </strong> [<a href="papers/asplos14.pdf" target="_blank">pdf</a> | <a href="papers/asplos14.ps" target="_blank">ps</a> | <a href="papers/asplos14.bib" target="_blank">bib</a>]
 						<br>
 						Jiaqi Zhang, Lakshminarayanan Renganarayana, Xiaolan Zhang, Niyu Ge, Vasanth Bala, Tianyin Xu, and Yuanyuan Zhou
 						<br>
@@ -289,7 +289,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt; font-family: Times New Roman;">
-						<strong> Do Not Blame Users for Misconfigurations </strong> [<a href="papers/sosp13.pdf">pdf</a> | <a href="papers/sosp13.ps">ps</a> | <a href="papers/sosp13.bib">bib</a>]
+						<strong> Do Not Blame Users for Misconfigurations </strong> [<a href="papers/sosp13.pdf" target="_blank">pdf</a> | <a href="papers/sosp13.ps" target="_blank">ps</a> | <a href="papers/sosp13.bib" target="_blank">bib</a>]
 						<br>
 						Tianyin Xu, Jiaqi Zhang, Peng Huang, Jing Zheng, Tianwei Sheng, Ding Yuan, Yuanyuan Zhou, and Shankar Pasupathy
 						<br>
