--- a/index.html
+++ b/index.html
@@ -326,18 +326,18 @@ where I got to know a girl who later became my wife. I <a href="travel.html" tar
 		          <TD width="0.5%">&nbsp;</TD>
 
 							<TR>
-						  <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px"><span class="style121"><A name=researchint id="researchint"></A></span><b>$ ls -l <a href="publication.html">all_papers</a></b></span></TD>
+						  <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px"><span class="style121"><A name=researchint id="researchint"></A></span><b>$ ls -l <a href="publication.html">publication</a></b></span></TD>
                           </TR>			  <TR>
                           <TD class=content_title>&nbsp;</TD>
 					      <TD class=content width="96%">
-							<p class="STYLE12" style="margin-top: 5px; margin-bottom: 5px"><span style="font-size:11pt;mso-bidi-font-size:12.0pt; mso-fareast-font-family:;mso-bidi-font-family:&quot;Times New Roman&quot;;mso-font-kerning: 1.0pt;mso-ansi-language:EN-US;mso-fareast-language:ZH-CN;mso-bidi-language: AR-SA">lrwxrwxrwx 1 tianyin tianyin 4 Feb 30 12:61 all_papers ->  <a href="publication.html"><b>paper.list</b></a></span></p>
+							<p class="STYLE12" style="margin-top: 5px; margin-bottom: 5px"><span style="font-size:11pt;mso-bidi-font-size:12.0pt; mso-fareast-font-family:;mso-bidi-font-family:&quot;Times New Roman&quot;;mso-font-kerning: 1.0pt;mso-ansi-language:EN-US;mso-fareast-language:ZH-CN;mso-bidi-language: AR-SA">lrwxrwxrwx 1 tianyin tianyin 4 Feb 30 12:61 publication ->  <a href="publication.html"><b>publication.html</b></a></span></p>
 						  </TD>
                           </TR>
 
 
 		          <TD width="0.5%">&nbsp;</TD>
 						<TR>
-						  <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px"><span class="style121"><A name=researchint id="researchint"></A></span><b>$ awk -v RS="" '$0 ~ "\nTianyin"' <a href="publication.html">paper.list</a></b></span></TD>
+						  <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px"><span class="style121"><A name=researchint id="researchint"></A></span><b>$ awk -v RS="" '$0 ~ "\nTianyin"' <a href="publication.html">publication.html</a></b></span></TD>
                           </TR>
 						  <TR>
                           <TD class=content_title>&nbsp;</TD>
