--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -252,7 +252,7 @@
                       <ul>
                         <li>
                             <b>
-                              Yifan will share his work at NVIDIA on building reliable
+                              <a href="https://www.linkedin.com/in/yifan-hao-806128ba/" target="_blank">Yifan</a> will share his work at NVIDIA on building reliable
                               GPU drivers.
                             </b>
                             <p></p>
@@ -409,7 +409,7 @@
                     <td class="papers">
                         <ul>
                             <li>
-                              <b>Saurabh will co-present the distributed storage systems paper and share his experiences on reliability of distributed file and storage systems.</b>
+                              <b><a href="http://sjha8.web.engr.illinois.edu/" target="_blank">Saurabh</a> will co-present the distributed storage systems paper and share his experiences on reliability of distributed file and storage systems.</b>
                               <p></p>
                             </li>
                             <li> A. Ganesan, R. Alagappan, A. C. Arpaci-Dusseau,
@@ -547,7 +547,7 @@
                     <td class="papers">
                         <ul>
                             <li>
-                                <b>Justin Meza from Facebook will give a guest lecture on Network Storms at Facebook.</b>
+                                <b><a class="paperlink" href="https://justinmeza.com/" target="_blank">Justin Meza</a> from Facebook will give a guest lecture on Network Storms at Facebook.</b>
                                 <p></p>
                             </li>
                             <li> P. Bailis and K. Kingsbury,
@@ -652,6 +652,12 @@
                     <td class="date"><a name="6th">Thu<br>10/4</a></td>
                     <td class="papers">
                         <ul>
+                            <li>
+                              <b>
+                                <a href="https://www.linkedin.com/in/qingrong-chen-680155150/" target="_blank">Qingrong</a> will co-present DeepXplore and share his experiences working on ML reliability.
+                              </b>
+                              <p></p>
+                            </li>
 
                             <li> K. Pei, Y. Cao, J. Yang, and S. Jana,
                                 <a class="paperlink" href="https://dl.acm.org/citation.cfm?id=3132785" target="_blank">DeepXplore: Automated Whitebox Testing of Deep Learning Systems</a>,
